k8s/main/backend/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: main
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: pythonicrahul/basic-notes-app-backend:main
          ports:
            - containerPort: 80
          imagePullPolicy: Always
      restartPolicy: Always
