k8s/main/backend/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: default
spec:
  selector:
    app: backend
  ports:
  - port: 3001
    targetPort: 3001
