k8s/main/backend/backend_ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backend-ingressroute
  namespace: main
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`api.steponedockerregistry.co.in`)
      services:
        - name: backend
          port: 80
